--- a/wwr/styles/site-rafting-plan.css
+++ b/wwr/styles/site-rafting-plan.css
@@ -15,7 +15,7 @@ Fonts are separated by a & */
 
   /* change the values below to your chosen font(s) */
   --heading-font: "Aguafina+Script&display";
-  --paragraph-font: Kalam&display, sans-serif;
+  --paragraph-font: Kalam&display, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #8338ec;  /* headlines on a white background */ 
