--- a/w-w-r/styles/site_plan-rafting.css
+++ b/w-w-r/styles/site_plan-rafting.css
@@ -2,31 +2,29 @@
 /* if you are using any Google fonts change the font names below to your fonts. 
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a & */
-@import url('https://fonts.googleapis.com/css2?family=Aguafina+Script&display=swap');
-
-@import url('https://fonts.googleapis.com/css2?family=Kalam&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IM+Fell+French+Canon&family=Lato:ital,wght@0,400;0,700;1,400&display=swap');
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #3df818   ;
-  --secondary-color: #ffe70a ;
-  --accent1-color: #ff006e;
-  --accent2-color: #8338ec;
+  --primary-color: #396E94   ;
+  --secondary-color: #E7C24F ;
+  --accent1-color: #A42212;
+  --accent2-color: white;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "Aguafina+Script&display";
-  --paragraph-font: Kalam&display, Helvetica, sans-serif;
+  --heading-font: "IM Fell French Canon";
+  --paragraph-font: Lato, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #8338ec;  /* headlines on a white background */ 
+  --headline-color-on-white: #396E94;  /* headlines on a white background */ 
   --headline-color-on-color: white; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #fb800c; /* paragraph text on a white background */ 
+  --paragraph-color-on-white: #396E94; /* paragraph text on a white background */ 
   --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #fb800c  ;
-  --nav-link-color: #fb800c;
-  --nav-background-color: #8338ec;
+  --paragraph-background-color: #396E94  ;
+  --nav-link-color: #396E94;
+  --nav-background-color: #D4AC0D;
   --nav-hover-link-color: white;
-  --nav-hover-background-color: #fb800c;
+  --nav-hover-background-color: #396E94;
 }
 
 
