--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -2,18 +2,18 @@
 /* if you are using any Google fonts change the font names below to your fonts. 
 Any spaces in your font name should be replaced with a +. 
 Fonts are separated by a & */
-@import url('https://fonts.googleapis.com/css2?family=Alkatra:wght@500&family=Josefin+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&family=Poppins:wght@500&display=swap');
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #396E94   ;
-  --secondary-color: #E7C24F ;
-  --accent1-color: #A42212;
+  --primary-color: #ffbe0b   ;
+  --secondary-color: #a33bff ;
+  --accent1-color: #fb5607;
   --accent2-color: white;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "Alkatra:wght@500";
-  --paragraph-font: Josefin+Sans, Helvetica, sans-serif;
+  --heading-font: "Bruno+Ace+SC";
+  --paragraph-font: Poppins:wght@500, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #396E94;  /* headlines on a white background */ 
