--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -16,15 +16,15 @@ Fonts are separated by a & */
   --paragraph-font: Poppins:wght@500, Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
-  --headline-color-on-white: #2606f7;  /* headlines on a white background */ 
-  --headline-color-on-color: rgb(124, 6, 251); /* headlines on a colored background */ 
-  --paragraph-color-on-white: #000000; /* paragraph text on a white background */ 
+  --headline-color-on-white: #396E94;  /* headlines on a white background */ 
+  --headline-color-on-color: white; /* headlines on a colored background */ 
+  --paragraph-color-on-white: #16f625; /* paragraph text on a white background */ 
   --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
-  --paragraph-background-color: #15fa78  ;
-  --nav-link-color: #181625;
-  --nav-background-color: #d4630d;
+  --paragraph-background-color: #396E94  ;
+  --nav-link-color: #396E94;
+  --nav-background-color: #D4AC0D;
   --nav-hover-link-color: white;
-  --nav-hover-background-color: #0915fa;
+  --nav-hover-background-color: #396E94;
 }
 
 
