--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -4,6 +4,8 @@ Any spaces in your font name should be replaced with a +.
 Fonts are separated by a & */
 @import url('https://fonts.googleapis.com/css2?family=Caveat:wght@600&family=Dancing+Script:wght@700&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&family=Roboto&display=swap');
+
 :root {
   /* change the values below to your colors from your palette */
   --primary-color: #ffbe0b   ;
@@ -12,8 +14,8 @@ Fonts are separated by a & */
   --accent2-color: white;
 
   /* change the values below to your chosen font(s) */
-  --heading-font: "Caveat:wght@600";
-  --paragraph-font: Dancing+Script:wght@700, Helvetica, sans-serif;
+  --heading-font: "Roboto";
+  --paragraph-font: Roboto;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #0a04b6;  /* headlines on a white background */ 
@@ -34,7 +36,7 @@ body {
   max-width: 960px;
   margin: 0 auto;
   padding: 4em;
-  font-size: 18px;
+  font-size: 2em;
   text-align: center;
 }
 img {
