--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -3,16 +3,31 @@
 	max-width: 1600px;
 	margin: 0 auto;
 }
+#logo_link {
+	padding-top: 5px;
+}
 nav a {
 	text-align: center;
-	color: rgb(36, 4, 245);
+	color: #fcfbfb;
 	text-decoration: none;
+	padding: 35px;
 }
 #hero-msg h1, #hero-msg h4 {
 	text-align: center;
 }
+.home-title {
+    font-family: 'Rock Salt', 'Bradley Hand', sans-serif;
+    font-size: 2em;
+	margin-top: 10px;
+}
 .button-box {
 	text-align: center;
+}
+.card-img {
+    border: 10px solid #d9c2a3;
+}
+main section img {
+    box-sizing: border-box;
 }
 main section {
 	text-align: center;
@@ -23,6 +38,13 @@ main section {
 }
 body {
 	background-color: #fcfbfb;
+    font-family: Raleway, Arial, sans-serif;
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
+}
+h2 {
+    margin: 0;
 }
 header {
 	background-color: rgb(121, 255, 255);
@@ -32,8 +54,13 @@ nav a:hover {
 	color: #f2ff00
 }
 .book, .join {
-	color: rgb(36, 4, 245);
-	text-decoration: none;
+    background-color: #d9c2a3;
+    color: black;
+    text-decoration: none;
+    font-size: 18px;
+    padding: 15px 30px;
+    margin-top: 50px;
+	border-radius: 5px;
 }
 .book:hover, .join:hover {
 	background-color: rgb(81, 9, 250);
@@ -41,16 +68,24 @@ nav a:hover {
 }
 .msg {
 	color: rgb(0, 0, 0);
+	height: 1.5em;
+	background-color: #6f7364;
+  	line-height: 1.5em;
+	padding: 35px;
 }
 .msg h2 {
 	color: rgb(0, 0, 0);
 }
 .msg p {
 	color: rgb(0, 0, 0);
+	font-size: .8em;
+	padding-bottom: 15px;
 }
 footer {
+	margin-top: 200px;
 	background-color: rgb(201, 201, 201);
 	font-size: 1.2em;
+	padding: 25px 50px;
 }
 footer a {
 	color: rgb(36, 4, 245);
@@ -71,4 +106,11 @@ footer p a:hover {
 }
 .icon {
 	width: 80px;
+	padding-top: 10px;
+}
+.rivers-card, .camping-card, .rapids-card {
+	margin: 200px 0;
+}
+footer .social img {
+	padding-top: 15px;
 }
