--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -63,7 +63,7 @@ header {
 header > h1, header > h2 {
   color: var(--headline-color-on-color);
 }
-p {
+p {s
   font-family: var(--paragraph-font);
   color: var(--paragraph-color-on-white);
   padding: 1em;
