--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -65,7 +65,7 @@ header {
 header > h1, header > h2 {
   color: var(--headline-color-on-color);
 }
-p {s
+p {
   font-family: var(--paragraph-font);
   color: var(--paragraph-color-on-white);
   padding: 1em;
