--- a/positionstyles.css
+++ b/positionstyles.css
@@ -157,6 +157,8 @@
   /* This is the parent of the activity 6 boxes. */
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  align-content: space-around;
+  justify-content: space-around;
 }
 .red6 {
   width: 400px; 
@@ -171,13 +173,13 @@
   background-color: green;
   grid-column: 1/3;
   grid-row: 5/7;
-  z-index: 3;  
+  z-index: 2;  
 } 
 .yellow6 {
   width: 200px; 
   height: 400px;
   background-color: gold;
-  grid-column: 5/7;
+  grid-column: 5;
   grid-row: 3/7;
   z-index: 2; 
 } 
