--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -5,6 +5,14 @@
 }
 #logo_link {
 	padding-top: 5px;
+	justify-self: center;
+	align-self: center;
+	z-index: 1;
+}
+nav {
+    display: flex;
+    justify-content: space-around;
+	z-index: 1;
 }
 nav a {
 	text-align: center;
@@ -12,8 +20,40 @@ nav a {
 	text-decoration: none;
 	padding: 35px;
 }
+body { 
+	display: grid;
+	grid-template-columns: 1fr;
+}	
+#hero {
+	display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+	margin-top: -100px;
+}
+#hero-box {
+	/*width: 100%;*/
+    grid-column: 1/4;
+
+}
+#hero-img {
+	width: 100%;
+}	
+	
 #hero-msg h1, #hero-msg h4 {
 	text-align: center;
+}
+#hero-msg h4 {
+	color: rgb(236, 110, 110);
+}
+#hero-msg {
+	grid-column: 2/3;
+	grid-row: 1/2;
+	margin-top: 150px;
+	font-family: cursive;
+	z-index: 1;
+}
+.home-grid {
+	display: grid;
+	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
 }
 .home-title {
     font-family: 'Rock Salt', 'Bradley Hand', sans-serif;
@@ -25,16 +65,18 @@ nav a {
 }
 .card-img {
     border: 10px solid #d9c2a3;
+	transition: transform .5s;
+    box-shadow: 5px 5px 10px #6f7364;
+}
+.card-img:hover {
+	opacity: .6;
+	transform: scale(1.1);
 }
 main section img {
     box-sizing: border-box;
 }
 main section {
 	text-align: center;
-}
-#background {
-	height: 725px;
-	background-color: #6f7364;
 }
 body {
 	background-color: #fcfbfb;
@@ -47,7 +89,10 @@ h2 {
     margin: 0;
 }
 header {
-	background-color: #6f7364;
+	display: grid; /*added==============*/
+	grid-template-columns: 150px auto; /*added==============*/
+	background-color: #9b9d96;
+
 }
 nav a:hover {
 	background-color: rgb(81, 9, 250);
@@ -67,25 +112,34 @@ nav a:hover {
 	color: #f2ff00
 }
 .msg {
-	color: rgb(0, 0, 0);
-	height: 1.5em;
+	/*color: rgb(0, 0, 0);
+	height: 1.5em;*/
+	/*line-height: 1.5em;*/
 	background-color: #6f7364;
-  	line-height: 1.5em;
 	padding: 35px;
+	grid-column: 6/10;
+	grid-row: 6/7;
+	box-shadow: 5px 5px 10px #6f7364;
+
 }
 .msg h2 {
-	color: rgb(0, 0, 0);
+	color: white;
 }
 .msg p {
-	color: rgb(0, 0, 0);
+	color: white;
 	font-size: .8em;
+	/*added myself*/
+	padding-top: 15px;
 	padding-bottom: 15px;
 }
 footer {
 	margin-top: 200px;
-	background-color: rgb(201, 201, 201);
+	background-color: #6f7364;
 	font-size: 1.2em;
-	padding: 25px 50px;
+	padding: 25px 50px;	
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
 }
 footer a {
 	color: rgb(36, 4, 245);
@@ -97,9 +151,6 @@ footer a:hover {
 }
 footer p a:hover {
     text-decoration: underline;
-}
-#hero-img {
-	width: 100%;
 }
 .logo {
 	width: 80px;
@@ -113,4 +164,72 @@ footer p a:hover {
 }
 footer .social img {
 	padding-top: 15px;
+}
+.card-img, .mountains {
+    width: 100%;
+}
+.rivers-card {
+	grid-column: 2/4;
+	grid-row: 2/3;
+}
+.camping-card {
+	grid-column: 5/7;
+	grid-row: 2/3;
+}
+.rapids-card {
+	grid-column: 8/10;
+	grid-row: 2/3;
+}
+#background {
+	height: 725px;
+	background-color: #d9c2a3;
+	grid-column: 1/11;
+	grid-row: 4/9;
+}
+.mountains {
+	width: 100%;
+	grid-column: 2/7;
+	grid-row: 5/8;
+	box-shadow: 5px 5px 10px #6f7364;
+}
+@media screen and (max-width: 900px) {
+    #hero, .home-grid {
+        display: block;
+        height: auto;
+    }
+    nav, footer {
+        flex-direction: column;
+    }
+    nav a {
+        display: block;
+        padding: 15px;
+    }
+    #hero {
+        margin-top: 0;
+    }
+    #hero-msg {
+        margin-top: 0;
+    }
+    #hero-msg h4 {
+        display: none;
+    }
+    .home-title {
+        font-size: 25px;
+        color: #6f7364;
+    }
+    .rivers-card, .camping-card, .rapids-card { 
+        margin: 50px auto;
+        width: 60%;
+    }
+    #background {
+        display: none;
+    }
+    .mountains, .msg {
+        width: 80%;
+        display: block;
+        margin: 0 auto;
+    }
+    footer {
+        margin-top: 25px;
+    }
 }
